fix cover animation

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -25,7 +25,7 @@
       </div>
 
       <header id="cover" class="home clearfix">
-        <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-2500="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
+        <div class="cover-pic" data-component="AnimateScale" data-to="1.06"></div>
 
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
         <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
@@ -92,7 +92,6 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
-      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
@@ -105,6 +104,7 @@
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
       <script src="js/components/FixedHeader.js"></script>
+      <script src="js/components/AnimateScale.js"></script>
 
       <script src="js/main.js"></script>
 
