--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -22,7 +22,7 @@
     </div>
 
     <header id="cover" class="clearfix {{ page.coverClass }}">
-      <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-2500="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
+      <div class="cover-pic" data-component="AnimateScale" data-to="1.06"></div>
 
       <div class="container text-center">
         <h1><a href="">{{ page.title }}</a></h1>
@@ -132,7 +132,6 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
-      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
@@ -145,6 +144,7 @@
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
       <script src="js/components/FixedHeader.js"></script>
+      <script src="js/components/AnimateScale.js"></script>
 
       <script src="js/main.js"></script>
 
