--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -1,14 +1,24 @@
 
 #about {
   padding-top: 76px;
-  
+
+  .margin-bottom {
+    margin-bottom: 30px;
+
+    &.double {
+      margin-bottom: 60px;
+    }
+  }
+
   @media (min-width: 768px) {
     p {
       font-weight: 600;
     }
   }
+}
 
-  
+.fixie-text {
+  z-index: 9;
 }
 
 .authors {
@@ -18,7 +28,7 @@
   dt {
     display: inline-block;
     vertical-align: top;
-    width: 22.4%;
+    width: 25%;
     margin-bottom: 30px;
     font-family: 'Dia';
     font-weight: 700;
@@ -27,7 +37,7 @@
   dd {
     display: inline-block;
     vertical-align: top;
-    width: 77%;
+    width: 70%;
     margin-top: 3px;
     margin-bottom: 20px;
     font-family: 'Plantin';
