adjust menu width on small screen

--- a/app/_scss/modules/_menu.scss
+++ b/app/_scss/modules/_menu.scss
@@ -16,6 +16,10 @@
     width: 407px;
   }
 
+  @media (max-width: 450px) {
+    width: 80%;
+  }
+
   &::-webkit-scrollbar {
     display: none;
   }
