fix about mobile list

--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -43,6 +43,12 @@
     font-family: 'Plantin';
   }
 
+  @media (max-width: 480px) {
+    dd, dt {
+      width: 100%;
+    }
+  }
+
 }
 
 .map-container {
