--- a/app/_includes/menu.html
+++ b/app/_includes/menu.html
@@ -6,7 +6,7 @@
 	  <dt><a href="./sobre.html">Sobre</a></dt>
 	</dl>
 	<dl>
-	  <dt><a href="#">Projetos</a></dt>
+	  <dt><span>Projetos</span></dt>
 	  {% sorted_for post in site.posts sort_by:weight %}
 	    {% if post.enabled == "enabled" %}
 	      <dd><a href="{{ post.url  | remove_first:'/' }}">{{ post.title }}</a></dd>
@@ -16,7 +16,7 @@
 	  {% endsorted_for %}
 	</dl>
 	<dl>
-	  <dt><a href="#">Contato</a></dt>
+	  <dt><span>Contato</span></dt>
 	  <dd><a href="#">email</a></dd>
 	  <dd><a target="_blank" href="https://www.facebook.com/centrocx">facebook</a></dd>
 	</dl>
