--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -97,6 +97,9 @@
 
 .centro-container {
   margin: 0 90px 0 30px;
+  @media (max-width: 768px) {
+    margin: 0 20px 0 20px;
+  }
 
   img {
     width: 100%;
@@ -135,5 +138,7 @@
   }
   @media (max-width: 768px) {
     padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
   }
 }
