--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -6,6 +6,21 @@
     <meta name="description" content="{{ page.title }} {{ page.description }}">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
+
+    <meta content="{{ page.title }} | CENTRO" property="og:site_name">
+    <meta content="http://test.frontphant.com/centro/img/share/share.jpg" property="og:image">
+    <meta content="article" property="og:type">
+    <meta content="http://test.frontphant.com/centro/{{ page.permalink }}" name="og:url" />
+    <meta property="og:title" content="{{ page.title }} | CENTRO"/>
+    <meta property="og:description" content="{{ page.title }}{{ page.description }} {{ page.address }}"/>
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@centrocx">
+    <meta name="twitter:title" content="{{ page.title }} | CENTRO">
+    <meta name="twitter:description" content="{{ page.title }}{{ page.description }} {{ page.address }} http://test.frontphant.com/centro/{{ page.permalink }}">
+    <meta name="twitter:creator" content="@centrocx">
+    <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
+    <meta name="twitter:domain" content="http://test.frontphant.com/centro/{{ page.permalink }}">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) css/vendor.css -->
     <!-- bower:css -->
@@ -31,8 +46,8 @@
 
       <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options">
-          <a data-component="ToggleColor" class="share-link share-link__fb" href="javascript:;">facebook</a>
-          <a data-component="ToggleColor" class="share-link share-link__twitter" href="javascript:;">facebook</a>
+          <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/{{ page.permalink }}">facebook</a>
+          <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}{{ page.description }} {{ page.address }}&url=http://test.frontphant.com/centro/{{ page.permalink }}">twitter</a>
         </div>
     </header>
 
