Removed 'em breve' from disabled link in homepage.

--- a/app/_scss/templates/_home.scss
+++ b/app/_scss/templates/_home.scss
@@ -73,22 +73,22 @@ main#main {
   .disabled, .disabled .company, .disabled .coordinates {
     color: #d3d3d3!important;
   }
-@media (min-width: 768px) {
-  .disabled:hover .company:after {
-    content:"Em breve";
-    position: absolute;
-    background-color: #FFF;
-    color: #ff0000;
-    font: 400 14px/50px "Dia";
-    text-transform: uppercase;
-    left: 0; top: 0;
-    padding: 0 35px;
-    margin-top: -15px;
-    margin-left: 50px;
-    min-width: 160px;
-    display: block;
-  }
-}
+// @media (min-width: 768px) {
+//   .disabled:hover .company:after {
+//     content:"Em breve";
+//     position: absolute;
+//     background-color: #FFF;
+//     color: #ff0000;
+//     font: 400 14px/50px "Dia";
+//     text-transform: uppercase;
+//     left: 0; top: 0;
+//     padding: 0 35px;
+//     margin-top: -15px;
+//     margin-left: 50px;
+//     min-width: 160px;
+//     display: block;
+//   }
+// }
 
   .photo-hover {
     z-index: -1;
