add new share images

--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
 
     <meta content="{{ page.title }} | CENTRO" property="og:site_name">
-    <meta content="http://test.frontphant.com/centro/img/share/share.jpg" property="og:image">
+    <meta content="http://test.frontphant.com/centro/img/share/{{ page.shareImage }}" property="og:image">
     <meta content="article" property="og:type">
     <meta content="http://test.frontphant.com/centro/{{ page.permalink }}" name="og:url" />
     <meta property="og:title" content="{{ page.title }} | CENTRO"/>
