add swipe events for menu

--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -39,7 +39,7 @@
       </div>
 
       <header class="clearfix">
-        <a data-component="Toggle" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
+        <a data-component="Toggle" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
         <div class="share-options">
           <a class="share-link share-link__fb dark" href="javascript:;">facebook</a>
           <a class="share-link share-link__twitter dark" href="javascript:;">facebook</a>
@@ -75,6 +75,7 @@
       <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
       <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
       <script src="/_bower_components/lodash/lodash.js"></script>
+      <script src="/_bower_components/hammerjs/hammer.js"></script>
       <!-- endbower -->
       <script src="/_bower_components/preload/jquery.preload.js"></script>
       <script src="/_bower_components/queryloader2/queryloader2.min.js"></script>
