--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -43,7 +43,7 @@
         <div class="cover-pic" data-component="AnimateScale" data-to="1.06"></div>
 
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-        <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
+        <a data-component="Toggle ToggleColor" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options">
           <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
           <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
@@ -84,6 +84,7 @@
       <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
       <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
       <script src="/_bower_components/lodash/lodash.js"></script>
+      <script src="/_bower_components/hammerjs/hammer.js"></script>
       <!-- endbower -->
       <script src="/_bower_components/preload/jquery.preload.js"></script>
       <script src="/_bower_components/queryloader2/queryloader2.min.js"></script>
