--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -44,7 +44,7 @@
         <h2>{{ page.subtitle }}</h2>
       </div>
 
-      <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
+      <a data-component="Toggle ToggleColor" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options">
           <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/{{ page.permalink }}">facebook</a>
           <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}{{ page.description }} {{ page.address }}&url=http://test.frontphant.com/centro/{{ page.permalink }}">twitter</a>
@@ -124,6 +124,7 @@
     <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
     <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
     <script src="/_bower_components/lodash/lodash.js"></script>
+    <script src="/_bower_components/hammerjs/hammer.js"></script>
     <!-- endbower -->
     <script src="/_bower_components/preload/jquery.preload.js"></script>
     <script src="/_bower_components/queryloader2/queryloader2.min.js"></script>
