--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -14,10 +14,10 @@
         <meta property="og:description" content="{{ page.description }}"/>
         
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@centrocx">
+        <meta name="twitter:site" content="">
         <meta name="twitter:title" content="{{ page.title }}">
         <meta name="twitter:description" content="{{ page.description }} http://test.frontphant.com/centro/">
-        <meta name="twitter:creator" content="@centrocx">
+        <meta name="twitter:creator" content="">
         <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
         <meta name="twitter:domain" content="http://test.frontphant.com/centro/">
 
