--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -14,10 +14,10 @@
         <meta property="og:description" content="{{ page.description }}"/>
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@centrocx">
+        <meta name="twitter:site" content="">
         <meta name="twitter:title" content="{{ page.title }}">
         <meta name="twitter:description" content="{{ page.description }} http://test.frontphant.com/centro/">
-        <meta name="twitter:creator" content="@centrocx">
+        <meta name="twitter:creator" content="">
         <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
         <meta name="twitter:domain" content="http://test.frontphant.com/centro/">
 
@@ -41,8 +41,8 @@
       <header class="clearfix">
         <a data-component="Toggle" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
         <div class="share-options">
-          <a class="share-link share-link__fb dark" href="javascript:;">facebook</a>
-          <a class="share-link share-link__twitter dark" href="javascript:;">facebook</a>
+          <a class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
+          <a class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
         </div>
       </header>
 
