--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -15,10 +15,10 @@
     <meta property="og:description" content="{{ page.title }}{{ page.description }} {{ page.address }}"/>
     
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@centrocx">
+    <meta name="twitter:site" content="">
     <meta name="twitter:title" content="{{ page.title }} | CENTRO">
     <meta name="twitter:description" content="{{ page.title }}{{ page.description }} {{ page.address }} http://test.frontphant.com/centro/{{ page.permalink }}">
-    <meta name="twitter:creator" content="@centrocx">
+    <meta name="twitter:creator" content="">
     <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
     <meta name="twitter:domain" content="http://test.frontphant.com/centro/{{ page.permalink }}">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
