--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -48,7 +48,65 @@
 .map-container {
   position: relative;
   width: 100%;
-  height: 773px;
-  background: #f4f2ec image-url("content/about/map.jpg") no-repeat center;
-  @include background-size(cover);
+  background: #f4f2ec;
+
+  img {
+    width: 100%; 
+    z-index: 1;
+  }
+
+  .place {
+    display: none;
+    position: absolute;
+    top: 36%;
+    width: 100%;
+    left: 0;
+    transform: translate(0,-50%);
+    text-align: center;
+    z-index: 1;
+
+    h1 {
+      font: 700 100px "Plantin";
+      margin: 0;
+      line-height: 1;
+    }
+
+    p {
+      font: 400 30px "Dia";
+    }
+  }
+
+  .marker {
+    @include sprites-general("marker");
+
+    position: absolute;
+    text-decoration: none;
+    color: #FFF;
+    line-height: 2;
+    font: 400 15px "Dia";
+    font-size: 15px;
+    z-index: 2;
+    text-indent: 0;
+    text-align: center;
+    padding-top: 6px;
+
+    &:hover {
+      @include sprites-general("marker-hover");
+     
+      color: #000;
+      font: 400 15px "Dia";
+      font-size: 15px;
+      padding-top: 6px;
+      text-indent: 0;
+
+      // &:hover:after {
+      //   content: '\00a0\00a0';
+      //   border-color: #FFF transparent transparent transparent;
+      // }
+
+      &:hover + .place {
+        display: block;
+      }
+    }
+  }
 }
