--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -41,8 +41,8 @@
       <header class="clearfix">
         <a data-component="Toggle" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
         <div class="share-options">
-          <a class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
-          <a class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
+          <a class="share-link share-link__fb dark" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
+          <a class="share-link share-link__twitter dark" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
         </div>
       </header>
 
