fix header button

--- a/app/_scss/modules/_header.scss
+++ b/app/_scss/modules/_header.scss
@@ -35,9 +35,9 @@
     @media (max-width: 768px) {
       // top: 26px;
       top: 14px;
-      // background-position: -2px -86px;
-      // height: 28px;
-      // width: 28px;
+      background-position: -2px -155px;
+      height: 28px;
+      width: 28px;
     }
   }
 }
