adjust share position mobile

--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -40,7 +40,7 @@
 
       <header class="clearfix">
         <a data-component="Toggle" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
-        <div class="share-options">
+        <div class="share-options desktop-only">
           <a class="share-link share-link__fb dark" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
           <a class="share-link share-link__twitter dark" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
         </div>
@@ -49,6 +49,11 @@
       {% include menu.html %}
 
       <main id="main">
+        <div class="share-options mobile-only">
+          <a class="share-link share-link__fb dark" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
+          <a class="share-link share-link__twitter dark" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
+        </div>
+
         {{ content }}
       </main>
 
