--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -44,7 +44,7 @@
 
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
         <a data-component="Toggle ToggleColor" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
-        <div class="share-options">
+        <div class="share-options mobile-centered">
           <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
           <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
         </div>
