--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -45,7 +45,7 @@
       </div>
 
       <a data-component="Toggle ToggleColor" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
-        <div class="share-options">
+        <div class="share-options mobile-centered">
           <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/{{ page.permalink }}">facebook</a>
           <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}{{ page.description }} {{ page.address }}&url=http://test.frontphant.com/centro/{{ page.permalink }}">twitter</a>
         </div>
