--- a/app/_scss/modules/_share.scss
+++ b/app/_scss/modules/_share.scss
@@ -8,8 +8,23 @@
 
   @media (max-width: 768px) {
     top: 165px;
-  }
 
+    &.mobile-centered {
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      margin: 90px -16px 0 0;
+    }
+
+    #main & {
+      position: relative;
+      top: auto;
+      right: auto;
+      width: 33px;
+      margin: 80px auto -80px;
+      z-index: 1;
+    }
+  }
 }
 
 .share-link {
