--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -53,7 +53,7 @@
       {% include menu.html %}
 
       <main id="main">
-        <div class="container">
+        <div class="container show-smooth">
           {{ content }}
         </div>
       </main>
