adjust margins for mobile

--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -103,8 +103,16 @@
   .margin-bottom {
     margin-bottom: 30px;
 
+    @media (max-width: 768px) {
+      margin-bottom: 20px;
+    }
+
     &.double {
       margin-bottom: 60px;
+
+      @media (max-width: 768px) {
+        margin-bottom: 40px;
+      }
     }
   }
 
