--- a/app/_scss/modules/_share.scss
+++ b/app/_scss/modules/_share.scss
@@ -12,7 +12,7 @@
     &.mobile-centered {
       position: absolute;
       top: 50%;
-      right: 50%;
+      right: 46px;
       margin: 90px -16px 0 0;
     }
 
