--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -39,7 +39,7 @@
       </div>
 
       <header class="clearfix">
-        <a data-component="Toggle" data-target="#menu" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
+        <a data-component="Toggle" data-target="#menu, body" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
         <div class="share-options desktop-only">
           <a class="share-link share-link__fb dark" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
           <a class="share-link share-link__twitter dark" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
@@ -49,11 +49,6 @@
       {% include menu.html %}
 
       <main id="main">
-        <div class="share-options mobile-only">
-          <a class="share-link share-link__fb dark" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
-          <a class="share-link share-link__twitter dark" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
-        </div>
-
         {{ content }}
       </main>
 
