fix iphone white bar

--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta content="{{ page.title }}" property="og:site_name">
         <meta content="http://test.frontphant.com/centro/img/share/CENTRO_share_centro.jpg" property="og:image">
