--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} | CENTRO</title>
     <meta name="description" content="{{ page.title }} {{ page.description }}">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
 
     <meta content="{{ page.title }} | CENTRO" property="og:site_name">
