--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -124,6 +124,7 @@
     text-align: center;
     padding-top: 6px;
     width: 26px;
+    height: 34px;
 
     &:hover {
       @include sprites-general("marker-hover");
@@ -134,6 +135,7 @@
       padding-top: 6px;
       text-indent: 0;
       width: 26px;
+      height: 34px;
 
       // &:hover:after {
       //   content: '\00a0\00a0';
