--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -22,6 +22,27 @@
         <meta name="twitter:domain" content="http://test.frontphant.com/centro/">
 
         <link rel="shortcut icon" href="/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
+        <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+        <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="apple-mobile-web-app-title" content="centro.cx">
+        <meta name="application-name" content="centro.cx">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+        <meta name="theme-color" content="#ffffff">
+
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.) css/vendor.css -->
         <!-- bower:css -->
@@ -71,18 +92,6 @@
       <!-- build:js(app) js/vendor.js -->
       <!-- bower:js -->
       <script src="/_bower_components/jquery/dist/jquery.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-      <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
       <script src="/_bower_components/lodash/lodash.js"></script>
       <script src="/_bower_components/hammerjs/hammer.js"></script>
       <!-- endbower -->
@@ -91,14 +100,14 @@
       <!-- endbuild -->
 
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-      <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X');ga('send','pageview');
-      </script>
+      <!-- <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='//www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-XXXXX-X');ga('send','pageview');
+    </script> -->
 
       <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script> -->
 
@@ -106,7 +115,6 @@
 
       <script src="js/lib/sji.js"></script>
       <script src="js/lib/underscore.js"></script>
-      <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
