add proper share links

--- a/app/_includes/menu.html
+++ b/app/_includes/menu.html
@@ -17,7 +17,7 @@
 	</dl>
 	<dl>
 	  <dt><span>Contato</span></dt>
-	  <dd><a href="#">email</a></dd>
+	  <dd><a href="mailto:info@centro.cx">email</a></dd>
 	  <dd><a target="_blank" href="https://www.facebook.com/centrocx">facebook</a></dd>
 	</dl>
 </nav>
