--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -7,19 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <meta content="{{ page.title }}" property="og:site_name">
-        <meta content="http://test.frontphant.com/centro/img/share/CENTRO_share_centro.jpg" property="og:image">
+        <meta content="http://centro.cx/img/share/CENTRO_share_centro.jpg" property="og:image">
         <meta content="article" property="og:type">
-        <meta content="http://test.frontphant.com/centro/" name="og:url" />
+        <meta content="http://centro.cx/" name="og:url" />
         <meta property="og:title" content="{{ page.title }}"/>
         <meta property="og:description" content="{{ page.description }}"/>
         
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="">
         <meta name="twitter:title" content="{{ page.title }}">
-        <meta name="twitter:description" content="{{ page.description }} http://test.frontphant.com/centro/">
+        <meta name="twitter:description" content="{{ page.description }} http://centro.cx/">
         <meta name="twitter:creator" content="">
-        <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
-        <meta name="twitter:domain" content="http://test.frontphant.com/centro/">
+        <meta name="twitter:image:src" content="http://centro.cx/img/share/share.jpg">
+        <meta name="twitter:domain" content="http://centro.cx/">
 
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -66,8 +66,8 @@
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
         <a data-component="Toggle ToggleColor" data-target="#menu, body" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options mobile-centered">
-          <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/">facebook</a>
-          <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://test.frontphant.com/centro/">twitter</a>
+          <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://centro.cx/">facebook</a>
+          <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.description }}&url=http://centro.cx/">twitter</a>
         </div>
       </header>
 
