--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -8,19 +8,19 @@
     <link rel="shortcut icon" href="/favicon.ico">
 
     <meta content="{{ page.title }} | CENTRO" property="og:site_name">
-    <meta content="http://test.frontphant.com/centro/img/share/{{ page.shareImage }}" property="og:image">
+    <meta content="http://centro.cx/img/share/{{ page.shareImage }}" property="og:image">
     <meta content="article" property="og:type">
-    <meta content="http://test.frontphant.com/centro/{{ page.permalink }}" name="og:url" />
+    <meta content="http://centro.cx/{{ page.permalink }}" name="og:url" />
     <meta property="og:title" content="{{ page.title }} | CENTRO"/>
     <meta property="og:description" content="{{ page.title }}{{ page.description }} {{ page.address }}"/>
     
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="">
     <meta name="twitter:title" content="{{ page.title }} | CENTRO">
-    <meta name="twitter:description" content="{{ page.title }}{{ page.description }} {{ page.address }} http://test.frontphant.com/centro/{{ page.permalink }}">
+    <meta name="twitter:description" content="{{ page.title }}{{ page.description }} {{ page.address }} http://centro.cx/{{ page.permalink }}">
     <meta name="twitter:creator" content="">
-    <meta name="twitter:image:src" content="http://test.frontphant.com/centro/img/share/share.jpg">
-    <meta name="twitter:domain" content="http://test.frontphant.com/centro/{{ page.permalink }}">
+    <meta name="twitter:image:src" content="http://centro.cx/img/share/share.jpg">
+    <meta name="twitter:domain" content="http://centro.cx/{{ page.permalink }}">
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -69,8 +69,8 @@
 
       <a data-component="Toggle ToggleColor" data-target="#menu, body" data-event="touchend mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options mobile-centered">
-          <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://test.frontphant.com/centro/{{ page.permalink }}">facebook</a>
-          <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}{{ page.description }} {{ page.address }}&url=http://test.frontphant.com/centro/{{ page.permalink }}">twitter</a>
+          <a data-component="ToggleColor" class="share-link share-link__fb" href="https://www.facebook.com/sharer.php?u=http://centro.cx/{{ page.permalink }}">facebook</a>
+          <a data-component="ToggleColor" class="share-link share-link__twitter" href="https://twitter.com/intent/tweet?text={{ page.title }}{{ page.description }} {{ page.address }}&url=http://centro.cx/{{ page.permalink }}">twitter</a>
         </div>
     </header>
 
