--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -9,6 +9,10 @@
       margin-bottom: 60px;
     }
   }
+
+  a {
+    color: #000;
+  }
 }
 
 .fixie-text {
@@ -65,7 +69,7 @@
   }
 
   img {
-    width: 100%; 
+    width: 100%;
     z-index: 1;
   }
 
@@ -77,7 +81,7 @@
     left: 50%;
     text-align: center;
     z-index: 1;
-    
+
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
@@ -95,7 +99,7 @@
 
       @media (max-width: 768px) {
         font-size: 50px;
-      } 
+      }
     }
 
     p {
@@ -128,7 +132,7 @@
 
     &:hover {
       @include sprites-general("marker-hover");
-     
+
       color: #000;
       font: 400 15px "Dia";
       font-size: 15px;
