--- a/app/_scss/modules/_cover.scss
+++ b/app/_scss/modules/_cover.scss
@@ -27,7 +27,7 @@
     }
   }
 
-  $covers-list: home, casa-do-povo, overground, phosphorus;
+  $covers-list: home, casa-do-povo, overground, phosphorus, fluxo;
 
   @each $cover in $covers-list {
       &.#{$cover} .cover-pic {
