Added custom grid to support right offset.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -11,6 +11,7 @@ $icon-font-path: "../_bower_components/bootstrap-sass-official/assets/fonts/boot
 @import "base/base";
 @import "base/font-face";
 @import "base/animate";
+@import "base/custom-grid";
 
 @import "modules/cover";
 @import "modules/logo";
