Updated footer message and added file to be included.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -12,7 +12,7 @@
         <meta content="http://centro.cx/" name="og:url" />
         <meta property="og:title" content="{{ page.title }}"/>
         <meta property="og:description" content="{{ page.description }}"/>
-        
+
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="">
         <meta name="twitter:title" content="{{ page.title }}">
@@ -79,15 +79,7 @@
         </div>
       </main>
 
-
-
-
-      <footer id="main">
-        <div class="container">
-          <p class="text-center">CENTRO – 2014-2015</p>
-          <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
-        </div>
-      </footer>
+      {% include footer.html %}
 
       <!-- build:js(app) js/vendor.js -->
       <!-- bower:js -->
