--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -13,7 +13,7 @@
     <meta content="http://centro.cx/{{ page.permalink }}" name="og:url" />
     <meta property="og:title" content="{{ page.title }} | CENTRO"/>
     <meta property="og:description" content="{{ page.title }}{{ page.description }} {{ page.address }}"/>
-    
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="">
     <meta name="twitter:title" content="{{ page.title }} | CENTRO">
@@ -121,11 +121,7 @@
           </div>
         </div>
 
-
-        <div class="row">
-          <p class="text-center">CENTRO – 2014-2015</p>
-          <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
-        </div>
+        {% include footer.html %}
 
       </div>
     </footer>
