--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -73,12 +73,7 @@
         {{ content }}
       </main>
 
-      <footer id="main">
-        <div class="container">
-          <p class="text-center">CENTRO – 2014-2015</p>
-          <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
-        </div>
-      </footer>
+      {% include footer.html %}
 
       <!-- build:js(app) js/vendor.js -->
       <!-- bower:js -->
