--- a/app/_scss/modules/_cover.scss
+++ b/app/_scss/modules/_cover.scss
@@ -27,7 +27,7 @@
     }
   }
 
-  $covers-list: home, casa-do-povo, overground, phosphorus, fluxo, pum, amarello, choque-cultural, mandibula, balsa;
+  $covers-list: home, casa-do-povo, overground, phosphorus, fluxo, pum, amarello, choque-cultural, mandibula, balsa, lamina;
 
   @each $cover in $covers-list {
       &.#{$cover} .cover-pic {
